fix bug jwt in my wallet backend