@@ -3,7 +3,9 @@ package ir.mywallet.services;
 import ir.mywallet.dto.Responses;
 import ir.mywallet.model.Account;
 import ir.mywallet.repository.AccountRepo;
+import ir.mywallet.validation.ExceptionErrors;
 import jakarta.transaction.Transactional;
+import jakarta.validation.constraints.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,38 +16,47 @@ import java.util.*;
 @Service
 public class AccountService {
 	
-	private final Logger logger = LoggerFactory.getLogger(AccountService.class);
+	private final Logger LOG = LoggerFactory.getLogger(AccountService.class);
+	private final AccountRepo accountRepo;
 	
 	@Autowired
-	private AccountRepo accountRepo;
+	public AccountService(AccountRepo accountRepo){
+		this.accountRepo = accountRepo;
+	}
+	
+	public List<Account> getAccounts(@NotNull int userId){
+		return accountRepo.getAllByUserId(userId);
+	}
 	
 	@Transactional
 	public Responses createAccount(Account account){
-		Responses res = new Responses();
 		Map<String,List<Object>> msg = new HashMap<>();
-		boolean exsistShabaNumber = this.checkExsistShabaNumber(account.getShabaNumber());
-		boolean exsistAccNumber = this.checkExsistAccnumber(account.getAccNumber());
-		if(exsistShabaNumber || exsistAccNumber){
-			res.setStatusType("error");
-			res.setStatusCode(400);
-			res.setTimestamp(new Date());
-			List<Object> msgIsValidExsist = new ArrayList<>();
-			if(exsistAccNumber){
-				msgIsValidExsist.add("شماره حساب تکراری است");
-			}
-			if(exsistShabaNumber){
-				msgIsValidExsist.add("شماره شبا تکراری است");
-			}
-			msg.put("existAccnumberAndShabaNumbber",msgIsValidExsist);
-			res.setMessages(msg);
-			return res;
-		}
+		this.checkShabaNumber(account.getShabaNumber());
+		this.checkAccNumber(account.getAccNumber());
 		accountRepo.save(account);
-		res.setStatusType("success");
-		res.setStatusCode(201);
-		res.setTimestamp(new Date());
 		msg.put("success",new ArrayList<>(List.of("افتتاح حساب با موفقیت انجام شد")));
+		return this.successResponse(msg);
+	}
+	
+	@Transactional
+	public Account updateAccount(Account account){
+		return accountRepo.save(account);
+	}
+	
+	@Transactional
+	public Responses deleteAccount(@NotNull int accId){
+		accountRepo.deleteById(accId);
+		Map<String,List<Object>> msg = new HashMap<>();
+		msg.put("success",new ArrayList<>(List.of("با موفقیعت حذف شد")));
+		return this.successResponse(msg);
+	}
+	
+	private Responses successResponse(Map<String,List<Object>> msg){
+		Responses res = new Responses();
+		res.setStatusCode(200);
+		res.setStatusType("success");
 		res.setMessages(msg);
+		res.setTimestamp(new Date());
 		return res;
 	}
 	
@@ -56,7 +67,7 @@ public class AccountService {
 		try{
 			return this.accountRepo.existsByAccNumber(AccNumber);
 		}catch(Exception e){
-			logger.error(e.getMessage());
+			LOG.error(e.getMessage());
 			return true;
 		}
 	}
@@ -68,27 +79,28 @@ public class AccountService {
 		try{
 			return this.accountRepo.existsByShabaNumber(shabaNumber);
 		}catch(Exception e){
-			logger.error(e.getMessage());
+			LOG.error(e.getMessage());
 			return true;
 		}
 	}
 	
-	public List<Account> getAccounts(int userId){
-		List<Account> account = new ArrayList<>();
-		account = accountRepo.getAllByUserId(userId);
-		return account;
+	private void checkShabaNumber(@NotNull String shabaNumber) throws ExceptionErrors{
+		boolean exsistShabaNumber = this.checkExsistShabaNumber(shabaNumber);
+		if(exsistShabaNumber){
+			Map<String,List<Object>> msg = new HashMap<>();
+			msg.put("shabaNumber",Arrays.asList("شماره شبا تکراری است"));
+			throw new ExceptionErrors(msg);
+		}
 	}
 	
-	public Responses deleteaccount(int accId){
-		accountRepo.deleteById(accId);
-		Responses res = new Responses();
-		Map<String,List<Object>> msg = new HashMap<>();
-		res.setStatusType("success");
-		res.setStatusCode(201);
-		res.setTimestamp(new Date());
-		msg.put("success",new ArrayList<>(List.of("با موفقیعت حذف شد")));
-		res.setMessages(msg);
-		return res;
+	private void checkAccNumber(@NotNull String accountNumber) throws ExceptionErrors{
+		boolean exsistAccNumber = this.checkExsistAccnumber(accountNumber);
+		if(exsistAccNumber){
+			Map<String,List<Object>> msg = new HashMap<>();
+			msg.put("accountNumber",Arrays.asList("شماره حساب تکراری است"));
+			throw new ExceptionErrors(msg);
+		}
 	}
+	
 	
 }
